--- a/app/src/main/res/drawable/ic_home_assistant_photo.xml
+++ b/app/src/main/res/drawable/ic_home_assistant_photo.xml
@@ -4,6 +4,6 @@
         android:viewportWidth="24.0"
         android:viewportHeight="24.0">
     <path
-        android:fillColor="@color/jet"
+        android:fillColor="@color/colorGarry700"
         android:pathData="M14.4,6L14,4H5v17h2v-7h5.6l0.4,2h7V6z"/>
 </vector>
