--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -14,161 +14,167 @@
         android:layout_height="0dp"
         android:layout_weight="1">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:contentDescription="@string/action_share"
-        android:src="@drawable/ic_share_black_24dp" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical" >
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:contentDescription="@string/action_share"
+            android:src="@drawable/ic_share" />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/page_logo"
-                android:layout_width="192dp"
-                android:layout_height="192dp"
-                android:layout_gravity="center"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:src="@drawable/logo2"
-                app:civ_border_color="@color/iron"
-                app:civ_border_width="1dp" />
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/aboutVersion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
-                android:fontFamily="sans-serif-condensed"
-                android:text="V2"
-                android:textSize="14sp" />
-
-            <TextView
-                android:id="@+id/aboutName"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="8dp"
-                android:layout_marginTop="68dp"
-                android:fontFamily="sans-serif"
-                android:gravity="center"
-                android:text="@string/app_name_persian"
-                android:textColor="@android:color/black"
-                android:textSize="24sp" />
+                android:orientation="vertical" >
 
-            <TextView
-                android:id="@+id/aboutEnName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/aboutName"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="8dp"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center"
-                android:text="@string/app_name"
-                android:textSize="16sp" />
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/page_logo"
+                    android:layout_width="220dp"
+                    android:layout_height="220dp"
+                    android:layout_gravity="center"
+                    android:paddingBottom="@dimen/activity_vertical_margin"
+                    android:paddingTop="110dp"
+                    android:src="@drawable/logo2"
+                    app:civ_border_color="@color/iron"
+                    app:civ_border_width="1dp" />
 
-            <TextView
-                android:id="@+id/aboutText1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/aboutEnName"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
-                android:text="@string/about_text_1"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/aboutText2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/aboutText1"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
-                android:text="@string/about_text_2"
-                android:textSize="16sp" />
-
-            <TextView
-                android:id="@+id/aboutVersin"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/aboutText2"
-                android:layout_centerHorizontal="true"
-                android:gravity="center"
-                android:lineSpacingExtra="12sp"
-                android:padding="@dimen/activity_vertical_margin"
-                android:text="@string/about_text_version"
-                android:textSize="14sp" />
-
-            <Space
-                android:id="@+id/spaceHolder"
-                android:layout_width="10dp"
-                android:layout_height="0dp"
-                android:layout_below="@id/aboutVersin"
-                android:layout_centerHorizontal="true" />
-
-            <TextView
-                android:id="@+id/aboutCopyRighr"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/aboutVersin"
-                android:layout_centerHorizontal="true"
-                android:ellipsize="end"
-                android:fontFamily="sans-serif-medium"
-                android:gravity="center"
-                android:padding="@dimen/activity_vertical_margin"
-                android:text="@string/about_text_copyright"
-                android:textSize="14sp" />
-
-            <TableLayout
-                android:id="@+id/faragostaresh"
-                android:layout_margin="@dimen/activity_vertical_margin"
-                android:padding="@dimen/nav_header_vertical_spacing"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TableRow
+                <TextView
+                    android:id="@+id/aboutName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="sans-serif"
                     android:gravity="center"
-                    android:layout_gravity="center"
-                    android:layout_margin="@dimen/pad_marg_all"
-                    android:orientation="vertical">
+                    android:text="@string/app_name_persian"
+                    android:textColor="@android:color/black"
+                    android:textSize="32sp" />
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/faragostareshLogo"
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
-                        android:src="@drawable/faragostaresh"
-                        app:civ_border_color="@color/iron"
-                        app:civ_border_width="1dp" />
+                <TextView
+                    android:id="@+id/aboutEnName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="8dp"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="center"
+                    android:text="@string/app_name"
+                    android:textSize="16sp" />
 
-                    <TextView
-                        android:id="@+id/faragostareshCopyright"
+                <TextView
+                    android:id="@+id/aboutText1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:text="@string/about_text_1"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/aboutText2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:text="@string/about_text_2"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/aboutText3"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:text="@string/about_text_3"
+                    android:textSize="22sp" />
+
+                <TextView
+                    android:id="@+id/aboutText4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:text="@string/about_text_4"
+                    android:textSize="16sp" />
+
+                <TextView
+                    android:id="@+id/aboutVersin"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/aboutText2"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:text="@string/about_text_version"
+                    android:textSize="14sp" />
+
+                <Space
+                    android:id="@+id/spaceHolder"
+                    android:layout_width="10dp"
+                    android:layout_height="0dp"
+                    android:layout_below="@id/aboutVersin"
+                    android:layout_centerHorizontal="true" />
+
+                <TextView
+                    android:id="@+id/aboutCopyRighr"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/aboutVersin"
+                    android:layout_centerHorizontal="true"
+                    android:ellipsize="end"
+                    android:fontFamily="sans-serif-medium"
+                    android:gravity="center"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:text="@string/about_text_copyright"
+                    android:textSize="14sp" />
+
+                <TableLayout
+                    android:id="@+id/faragostaresh"
+                    android:layout_margin="@dimen/activity_vertical_margin"
+                    android:padding="@dimen/nav_header_vertical_spacing"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TableRow
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/pad_marg_all"
-                        android:layout_marginRight="@dimen/pad_marg_all"
-                        android:text="@string/faragostareshCopyright"
-                        android:textSize="16dp" />
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:layout_margin="@dimen/pad_marg_all"
+                        android:orientation="vertical">
 
-                </TableRow>
-            </TableLayout>
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/faragostareshLogo"
+                            android:layout_width="64dp"
+                            android:layout_height="64dp"
+                            android:src="@drawable/faragostaresh"
+                            app:civ_border_color="@color/iron"
+                            app:civ_border_width="1dp" />
 
-        </LinearLayout>
-    </ScrollView>
+                        <TextView
+                            android:id="@+id/faragostareshCopyright"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/pad_marg_all"
+                            android:layout_marginRight="@dimen/pad_marg_all"
+                            android:text="@string/faragostareshCopyright"
+                            android:textSize="16dp" />
+
+                    </TableRow>
+                </TableLayout>
+
+            </LinearLayout>
+        </ScrollView>
     </FrameLayout>
 </LinearLayout>
