--- a/app/src/main/res/layout/activity_video_single.xml
+++ b/app/src/main/res/layout/activity_video_single.xml
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            android:src="@drawable/ic_share_black_24dp" />
+            android:src="@drawable/ic_share" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -46,12 +46,19 @@
                     android:layout_marginTop="0dp"
                     android:padding="@dimen/activity_vertical_margin" /> -->
 
-                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-                    android:id="@+id/player_view"
+                <FrameLayout
+                    android:layout_margin="0dp"
+                    android:padding="0dp"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/video_player_height"
-                    android:layout_marginTop="0dp"
-                    android:paddingTop="0dp" />
+                    android:layout_height="@dimen/video_player_height">
+
+                    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                        android:id="@+id/player_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/video_player_height"
+                        android:layout_marginTop="0dp"
+                        android:paddingTop="0dp" />
+                </FrameLayout>
 
                 <TextView
                     android:id="@+id/viewTitle"
