--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,7 +12,7 @@
     <item
         android:id="@+id/navigation_cafe"
         android:enabled="true"
-        android:icon="@drawable/ic_local_cafe"
+        android:icon="@drawable/ic_home_local_cafe"
         android:title="@string/title_cafe"
         app:showAsAction="ifRoom|withText" />
 
