--- a/app/src/main/res/layout/activity_video_single.xml
+++ b/app/src/main/res/layout/activity_video_single.xml
@@ -22,6 +22,8 @@
             android:layout_margin="@dimen/fab_margin"
             android:src="@drawable/ic_share" />
 
+
+
         <ScrollView
             android:layout_width="match_parent"
             android:descendantFocusability="beforeDescendants"
@@ -34,6 +36,14 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
+                <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+                    android:id="@+id/player_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/video_player_height"
+                    android:layout_marginTop="0dp"
+                    android:background="@color/black"
+                    android:paddingTop="0dp" />
+
                 <!-- <WebView
                     android:id="@+id/playerWebView"
                     android:layout_width="match_parent"
@@ -45,20 +55,6 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="0dp"
                     android:padding="@dimen/activity_vertical_margin" /> -->
-
-                <FrameLayout
-                    android:layout_margin="0dp"
-                    android:padding="0dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/video_player_height">
-
-                    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
-                        android:id="@+id/player_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/video_player_height"
-                        android:layout_marginTop="0dp"
-                        android:paddingTop="0dp" />
-                </FrameLayout>
 
                 <TextView
                     android:id="@+id/viewTitle"
