--- a/app/src/main/res/layout/grid_item_main.xml
+++ b/app/src/main/res/layout/grid_item_main.xml
@@ -5,16 +5,13 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@color/colorBackground"
-    android:padding="5dp" >
+    android:padding="@dimen/activity_vertical_margin" >
 
     <com.faragostaresh.extra.SquareImageView
         android:id="@+id/picture"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:paddingBottom="@dimen/main_grid_icon_padding_bottom"
-        android:paddingTop="@dimen/main_grid_icon_padding_top"
-        android:paddingLeft="@dimen/main_grid_icon_padding_left"
-        android:paddingRight="@dimen/main_grid_icon_padding_right"
+        android:layout_width="@dimen/main_grid_icon"
+        android:layout_height="@dimen/main_grid_icon"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
         android:scaleType="centerCrop" />
 
     <TextView
@@ -23,10 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:gravity="center"
-        android:textColor="@color/colorGarry700"
-        android:paddingBottom="@dimen/main_grid_text_padding_bottom"
-        android:paddingTop="@dimen/main_grid_text_padding_top"
-        android:paddingLeft="@dimen/main_grid_text_padding_left"
-        android:paddingRight="@dimen/main_grid_text_padding_right"/>
+        android:textSize="12dp"
+        android:textColor="@color/colorGarry700"/>
 
 </LinearLayout>
