--- a/app/src/main/res/layout/grid_item_main.xml
+++ b/app/src/main/res/layout/grid_item_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/picture"
         android:layout_width="@dimen/main_grid_icon"
         android:layout_height="@dimen/main_grid_icon"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginBottom="@dimen/pad_marg_all"
         android:scaleType="centerCrop" />
 
     <TextView
