--- a/app/src/main/res/layout/activity_video_single.xml
+++ b/app/src/main/res/layout/activity_video_single.xml
@@ -23,6 +23,7 @@
             android:src="@drawable/ic_share" />
 
         <ScrollView
+            android:id="@+id/mainScrollView"
             android:layout_width="match_parent"
             android:descendantFocusability="beforeDescendants"
             android:focusableInTouchMode="false"
@@ -41,6 +42,16 @@
                     android:layout_marginTop="0dp"
                     android:background="@color/black"
                     android:paddingTop="0dp" />
+
+                <!-- <TextView
+                    android:id="@+id/viewFull"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="right"
+                    android:lineSpacingExtra="12sp"
+                    android:padding="@dimen/activity_vertical_margin"
+                    android:text="full screen"
+                    android:textSize="20sp" /> -->
 
                 <!-- <WebView
                     android:id="@+id/playerWebView"
