--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -19,8 +19,10 @@
 
     Once you have your key (it starts with "AIza"), replace the "google_maps_key"
     string in this file.
+
+    // New : 20:A5:53:69:84:E3:02:54:F9:D7:5C:3F:10:0B:57:E7:C0:4D:E3:17
     -->
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
-        AIzaSyAfrcnZM_dTjMDxIMDIyhoCjGf3QQ6OeWU
+        AIzaSyAIrilJdHcOkS_fXE1e4Z8R3_wbBPifINk
     </string>
 </resources>
