--- a/app/src/main/res/layout/activity_cafe_single.xml
+++ b/app/src/main/res/layout/activity_cafe_single.xml
@@ -118,10 +118,15 @@
                 android:id="@+id/button_map"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/activity_vertical_margin"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_marginBottom="@dimen/activity_vertical_margin"
                 android:background="@color/colorAccent"
                 android:gravity="center"
                 android:onClick="showMap"
+                android:paddingLeft="@dimen/cast_expanded_controller_control_button_margin"
+                android:paddingRight="@dimen/cast_expanded_controller_control_button_margin"
+                android:drawableLeft="@drawable/ic_arrow_back_w"
+                android:drawableRight="@drawable/ic_map"
                 android:text="@string/cafe_map"
                 android:textColor="@color/white" />
 
