--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -39,7 +39,7 @@
                     android:layout_gravity="center"
                     android:paddingBottom="@dimen/activity_vertical_margin"
                     android:paddingTop="110dp"
-                    android:src="@drawable/logo2"
+                    android:src="@drawable/logo"
                     app:civ_border_color="@color/iron"
                     app:civ_border_width="1dp" />
 
@@ -141,8 +141,10 @@
 
                 <TableLayout
                     android:id="@+id/faragostaresh"
-                    android:layout_margin="@dimen/activity_vertical_margin"
-                    android:padding="@dimen/nav_header_vertical_spacing"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
+                    android:layout_marginBottom="64dp"
+                    android:paddingRight="@dimen/nav_header_vertical_spacing"
+                    android:paddingLeft="@dimen/activity_vertical_margin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
