--- a/app/src/main/res/values-large-xhdpi/dimens.xml
+++ b/app/src/main/res/values-large-xhdpi/dimens.xml
@@ -14,6 +14,8 @@
 
     <!-- Item pages -->
     <dimen name="video_player_height">360dp</dimen>
-    <dimen name="main_image_height">380dp</dimen>
+    <dimen name="main_image_height">500dp</dimen>
+
+    <integer name="grid_column_count">2</integer>
 
 </resources>
