--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="colorText">#616161</color>
     <color name="colorBrown50">#efebe9</color>
     <color name="colorBrown100">#d7ccc8</color>
+    <color name="colorBrown300">#a1887f</color>
     <color name="textColor">#616161</color>
 
     <color name="background_material_light">#efebe9</color>
